@@ -134,7 +134,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <argLine>-javaagent:${project.build.directory}/grinder-dcr-agent.jar
-            -XX:MaxPermSize=256m</argLine>
+            -Dbuild.travis=${build.travis}</argLine>
           <systemPropertyVariables>
             <grinder.version>${project.version}</grinder.version>
 
